logs/minitestlib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/minitestlib'...
Compiling './lib/python3.5/site-packages/minitestlib/Archive.py'...
***   File "./lib/python3.5/site-packages/minitestlib/Archive.py", line 83
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minitestlib/PWSwitch.py'...
***   File "./lib/python3.5/site-packages/minitestlib/PWSwitch.py", line 26
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minitestlib/TETJournal.py'...
***   File "./lib/python3.5/site-packages/minitestlib/TETJournal.py", line 192
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minitestlib/Utils.py'...
***   File "./lib/python3.5/site-packages/minitestlib/Utils.py", line 38
    def make_dir(src, permissions=0755):
                                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/minitestlib/WikiRPC.py'...
***   File "./lib/python3.5/site-packages/minitestlib/WikiRPC.py", line 31
    except socket.gaierror, err:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/minitestlib-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
